--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "icmp"
+description = "ICMP socket"
 version = "0.1.0"
 authors = ["svartalf <self@svartalf.info>"]
+repository = "https://github.com/svartalf/rust-icmp"
+keywords = ["icmp", "socket"]
 
 [dependencies]
 libc = "0.2.16"
