--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "icmp"
 description = "ICMP socket"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["svartalf <self@svartalf.info>"]
 repository = "https://github.com/svartalf/rust-icmp"
 keywords = ["icmp", "socket"]
@@ -9,3 +9,6 @@ license = "MIT"
 
 [dependencies]
 libc = "0.2.17"
+
+[dev-dependencies]
+clippy = "0.0.95"
