--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,9 @@ matrix:
   allow_failures:
     - rust: stable
 env:
-  - CARGO=$HOME/rust/bin/cargo RUSTC=$HOME/rust/bin/rustc RUSTDOC=$HOME/rust/bin/rustdoc RUST_BACKTRACE=1
+  - RUST_BACKTRACE=1
 script:
-  - echo $TRAVIS_RUST_VERSION
-  - ([ $TRAVIS_RUST_VERSION == nightly ] || $CARGO build --verbose)
-  - ([ $TRAVIS_RUST_VERSION != nightly ] || $CARGO build --verbose --features clippy)
-  - ([ $TRAVIS_RUST_VERSION == nightly ] || sudo $CARGO test --verbose)
-  - ([ $TRAVIS_RUST_VERSION != nightly ] || sudo $CARGO test --verbose --features clippy)
+  - ([ $TRAVIS_RUST_VERSION == nightly ] || cargo build --verbose)
+  - ([ $TRAVIS_RUST_VERSION != nightly ] || cargo build --verbose --features clippy)
+  - ([ $TRAVIS_RUST_VERSION == nightly ] || sudo cargo test --verbose)
+  - ([ $TRAVIS_RUST_VERSION != nightly ] || sudo cargo test --verbose --features clippy)
