--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ default = []
 
 [dependencies]
 libc = "0.2"
-clippy = { version = "0.0.162", optional = true }
+clippy = { version = "^0.0", optional = true }
