Updating to edition2018

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "icmp"
 description = "ICMP socket"
-version = "0.1.5"
+version = "0.2.0"
 authors = ["svartalf <self@svartalf.info>"]
 repository = "https://github.com/svartalf/rust-icmp"
 keywords = ["icmp", "socket"]
-license = "MIT"
+license = "Apache-2.0 OR MIT"
+edition = "2018"
 
 [features]
 default = []
 
 [dependencies]
-libc = "0.2.17"
-clippy = { version = "0.0.95", optional = true }
+libc = "0.2.51"
